<resources>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_amount">Enter amount</string>
    <string name="button_15">15%</string>
    <string name="button_18">18%</string>
    <string name="button_20">20%</string>
    <string name="button_clear">Clear</string>
    <string name="hello_world">Hello World!</string>
    <string name="invalid_amount">Please enter a valid amount.</string>
    <string name="tip_and_total">Tip: $%1$.2f, Total bill: $%2$.2f</string>
    <string name="hello_user">Hello %1$s %2$s!</string>
    <string name="app_name">Tip Calculator</string>
</resources>
